--- a/{{cookiecutter.package_name}}/.bumpversion.cfg
+++ b/{{cookiecutter.package_name}}/.bumpversion.cfg
@@ -1,4 +1,6 @@
 [bumpversion]
 current_version = 0.0.0
+commit = True
+tag = True
 
-[bumpversion:file:{{cookiecutter.package_name}}/setup.py]
+[bumpversion:file:{{cookiecutter.package_name}}/__init__.py]
