Add package description for flit docstring

--- a/{{cookiecutter.package_name}}/Makefile
+++ b/{{cookiecutter.package_name}}/Makefile
@@ -11,6 +11,7 @@ init:
 	bash bin/init.sh
 	pipenv shell
 
+.PHONY: test
 test:
 	bash bin/test.sh
 	pylint {{cookiecutter.package_name}} --reports=y
